# neurostr

./: .gitignore  CMakeLists.txt  README.md  build_docs.sh  couscous.yml  index.html
benchmark/: benchmark_folder.sh  plot_results.R
bundled/: tree.hh
bundled/spdlog/: tweakme.h
css/: cayman.css
doc/: advanced.html  arch.html  arch.md  classes.html  classes.md  contact.html  data_model.html  data_model.md  default_validation_tests.html  default_validation_tests.md  faq.html  index.html  index.md  install.html  install.md  io.html  io.md  measures.html  measures.md  selectors.html  selectors.md  tools.html  tools.md  tutorial.html  utils.html  validation.html  validation.md
doc/classes/: core.html  core.md  geometry.html  geometry.md  io.html  io.md  log.html  log.md  measure.html  measure.md  selector.html  selector.md  traits.md  validator.html  validator.md
doc/io/: format.html  format.md  input.md  output.md
doc/measures/: branch.md  lmeasure.md  neurite.md  neuron.md  node.md  prebuilt.html  prebuilt.md  predefined.md
doc/selectors/: branch.md  generic.md  neurite.md  neuron.md  node.md  operations.html  operations.md  prebuilt.html  prebuilt.md  predefined.md
doc/tutorial/: basics.html  basics.md  measures.html  selectors.html
docs/: advanced.md  contact.html  contact.md  couscous.yml  default_validation_tests.html  default_validation_tests.md  faq.html  faq.md  goals_architecture.html  goals_architecture.md  install.md  io.html  measures.html  measures.md  selectors.html  selectors.md  tutorial.md  utils.md  validation.html  validation.md
docs/io/: output.html
docs/measures/: branch.html  neurite.md  neuron.html
docs/selectors/: branch.html  branch.md  node.html  operations.md
docs/tutorial/: measures.md  selectors.html  selectors.md
include/core/: branch.h  contour.h  neurite.h  neuron.h  property.h
include/io/: ASCParser.h  DATParser.h  JSONParser.h  JSONWriter.h  SWCParser.h  nl_structure.h
include/measure/: aggregate.h  branch_measure.h  lmeasure_decl.h
include/methods/: branchComparison.h  scholl.h  triContour.h
include/neurostr/core/: branch.h  contour.h  geometry.h  neurite.h  neuron.h  node.h  property.h  traits.h
include/neurostr/io/: ASCParser.h  DATParser.h  JSONParser.h  JSONWriter.h  SWCParser.h  SWCWriter.h  nl_structure.h  parser.h  parser_dispatcher.h
include/neurostr/measure/: aggregate.h  aggregator_traits.h  branch_measure.h  lmeasure_decl.h  measure.h  measure_operations.h  measure_traits.h  neurite_measure.h  neuron_measure.h  node_measure.h  universal_measure.h
include/neurostr/methods/: boxCutter.h  branchComparison.h  scholl.h  triContour.h
include/neurostr/selector/: branch_selector.h  neurite_selector.h  neuron_selector.h  node_selector.h  selector.h  selector_operations.h  selector_set_operations.h  universal_selector.h
include/neurostr/validator/: checks.h  predefined_validators.h  validator.h
include/selector/: branch_selector.h  neurite_selector.h  selector.h  selector_operations.h  selector_set_operations.h
include/validator/: checks.h  predefined_validators.h  validator.h
lib/: neurostr.txt  neurostrlib.txt
lib/include/core/: branch.h  contour.h  definitions.h  geometry.h  log.h  neurite.h  neurite_type.h  neuron.h  node.h  property.h  references.h  traits.h  tree.hh
lib/include/io/: ASCParser.h  DATParser.h  JSONParser.h  JSONWriter.h  SWCParser.h  SWCWriter.h  nl_structure.h  parser.h  parser_dispatcher.h
lib/include/measure/: aggregate.h  aggregator_traits.h  branch_measure.h  lmeasure_decl.h  measure.h  measure_operations.h  measure_traits.h  neurite_measure.h  neuron_measure.h  node_measure.h  universal_measure.h
lib/include/methods/: boxCutter.h  branchComparison.h  triContour.h
lib/include/selector/: branch_selector.h  neurite_selector.h  neuron_selector.h  node_selector.h  selector.h  selector_operations.h  selector_set_operations.h  selector_traits.h  universal_selector.h
lib/include/validator/: checks.h  predefined_validators.h  validator.h
lib/src/core/: branch.cpp  contour.cpp  geometry.cpp  log.cpp  neurite.cpp  neuron.cpp  node.cpp  property.cpp
lib/src/io/: ASCParser.cpp  DATParser.cpp  JSONParser.cpp  JSONWriter.cpp  SWCParser.cpp  SWCWriter.cpp  nl_structure.cpp  parser_dispatcher.cpp
lib/src/methods/: boxCutter.cpp  branchComparison.cpp  triContour.cpp
lib/src/validator/: validator.cpp
src/core/: branch.cpp  contour.cpp  geometry.cpp  log.cpp  neurite.cpp  neurite_type.cpp  neuron.cpp  node.cpp  property.cpp
src/io/: ASCParser.cpp  DATParser.cpp  JSONParser.cpp  JSONWriter.cpp  SWCParser.cpp  SWCWriter.cpp  nl_structure.cpp  parser_dispatcher.cpp
src/measure/: measure_operations.cpp
src/methods/: boxCutter.cpp  branchComparison.cpp  scholl.cpp  triContour.cpp
src/validator/: validator.cpp
test/: main.cpp  tests.txt
test/src/aux/: load_data_funcs.cpp
test/src/core/: branch_test.cpp  contour_test.cpp  geometry_test.cpp  neurite_test.cpp  neuron_test.cpp  node_test.cpp  property_test.cpp  reconstruction_test.cpp
test/src/io/: JSONParser_test.cpp  io_asc_parser.cpp  io_swc_parser.cpp
test/src/measure/: lmeasure_measures.cpp  node_measure_test.cpp
tests/: main.cpp  tests.txt
tools/: Benchmark.cpp  BoxCutter.cpp  BranchFeatureExtractor.cpp  Contour3DTagger.cpp  NeuriteFeatureExtractor.cpp  NeuroConverter.cpp  Scholl.cpp  TagFeatureExtractor.cpp  Validator.cpp
utils/BoxCutter/: BoxCutter.txt  main.cpp
utils/BranchFeatureExtractor/: main.cpp
utils/NeuriteFeatureExtractor/: NeuriteFeatureExtractor.txt  main.cpp
utils/NeuroConverter/: NeuroConverter.txt  main.cpp
utils/Validator/: main.cpp
utils/benchmark/: main.cpp  plot_results.R
website/: index.html
website/css/: theme-fixes.css
website/doc/: advanced.html  arch.html  classes.html  contact.html  default_validation_tests.html  faq.html  install.html  io.html  measures.html  selectors.html  tools.html  tutorial.html  utils.html  validation.html
website/docs/: advanced.html  index.html  install.html  tutorial.html  utils.html
website/js/: theme.js
(+115 files in other folders)
